Header fixed on mobile

--- a/web/components/HorizontalHeader.module.css
+++ b/web/components/HorizontalHeader.module.css
@@ -2,7 +2,7 @@
 @import "../styles/custom-properties.css";
 
 .root {
-  position: absolute;
+  position: fixed;
   color: #202123;
   color: var(--color-white, #000);
   display: flex;
@@ -11,6 +11,10 @@
   left: 0;
   width: 100%;
   z-index: 20;
+
+  @media (--media-min-navbar) {
+    position: absolute;
+  }
 }
 
 .root a {
